--- a/frontend/src/pages/game/Game.module.css
+++ b/frontend/src/pages/game/Game.module.css
@@ -3,9 +3,15 @@
 .play_image {
     composes: game_image from '../home/Home.module.css';
     opacity: 1;
+    position: static;
 }
 
 .menu {
     display: flex;
     flex-direction: column;
 }
+
+.selected {
+    width: 200px;
+}
+
