--- a/frontend/src/pages/home/Home.module.css
+++ b/frontend/src/pages/home/Home.module.css
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Seymour+One&display=swap');
 
-@media only screen and (max-width: 1250px) {
+@media only screen and (max-width: 4000px) {
     .game_image {
-        width: 90%;
-        height: auto;
+        width: 800px;
+        height: 50%;
+        position: absolute;
+        right: calc((100vw - 800px)/2)
+    }
+}
+
+@media only screen and (max-width: 1050px) {
+    .game_image {
+        width: clamp(800px, 90%, 1000px);
+        height: 50%;
         position: absolute;
         right: calc((100vw - 90%)/2)
     }
@@ -12,7 +21,7 @@
 @media only screen and (max-width: 800px) {
     .game_image {
         width: clamp(600px, 95%, 800px);
-        height: auto;
+        height: 50%;
         position: absolute;
         right: calc((100vw - 95%)/2)
     }
@@ -21,7 +30,7 @@
 @media only screen and (max-width: 600px) {
     .game_image {
         width: 100%;
-        height: auto;
+        height: 50%;
         position: absolute;
         right: calc((100vw - 100%)/2)
     }
